<resources>
    <string name="app_name">s185122_Hangman</string>

    <!--    Welcome fragment-->

    <string name="headlineText1">Hangman</string>
    <string name="headlineText2">Beware the rope!!</string>
    <string name="playButtonWelcome">Play</string>
    <string name="highscoreButtonWelcome">Highscore</string>

    <!--    Input name fragment-->

    <string name="inputNameInfo">
        Let´s play a little game inmate. \n
        If you win you get to live another day. \n
        If you loose. well you loose..
    </string>

    <!--    Loose fragment-->

    <!--    TODO - not important-->

    <!--    Win fragment-->

    <!--    TODO - not important-->

    <!--    Game page fragment-->

    <string name="playerNameGamePage">Hello </string>
    <string name="winsGame">You escaped the noose!</string>
    <string name="loosesGame">Game over!</string>
    <string name="editTextHintXml">Input any letter</string>
    <string name="confirmButtonXML">OK</string>
    <string name="clearButtonXML">Clear</string>
    <string name="newGameGamePageXML">New game</string>
    <string name="backToMainGamePageXML">Back to main menu</string>
    <string name="playerNameHintGamePageXML">Players name</string>

    <!--    Highscore fragment-->

    <string name="highscoreHeadlineXML">HIGHSCORES</string>
    <string name="playerHighscoreXML">Players</string>
    <string name="winsHighscoreXML">Wins</string>

    <string name="welcome_hang_pic">Hangman pic</string>


    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--    About fragment-->

    <string name="aboutText">

        I started programming very late in my life.
        33 years old.
        But i quickly realized. this is what i want to do with
        my life.
        I have always had a passion for gaming, software,
        electronics and everything IT related.
        I spend the first 13 years of my working
        career as a mason. A decade later i finally
        realized that i software engineering was
        what i wanted to do.

    </string>
    <string name="aboutBackButton">Back to main menu</string>

    <!--    Help fragment-->

    <string name="helpText">

        The rules for Hangman is as follows:\n\n

        - You need to guess the hidden word displayed by a number of \'*\'.\n
        - If you guess the word before the man is hanged, you win!\n
        - If you guess wrong 7 times, (the man is fully displayed in the noose,\n
          and a final wrong answer will kill him) then you loose the game.\n\n
        - Each time you win, you will go up a point in the highscore list. \n

        If you press \'New game!\'. the game will reset and you can try again.\n\n
        Good luck convict!

    </string>
    <string name="helpBackButton">Back to main menu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
