<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fragmentContainerBackground">

        <TextView
            android:id="@+id/headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/headlineText1"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/textColor2"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.09" />

        <ImageView
            android:id="@+id/welcome_hang_pic"
            android:layout_width="match_parent"
            android:layout_height="239dp"
            android:contentDescription="@string/welcome_hang_pic"
            android:src="@drawable/galge_billede1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.56" />

        <Button
            android:id="@+id/goToGame"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/fragmentContainerBackground"
            android:fontFamily="casual"
            android:text="@string/playButtonWelcome"
            android:textAllCaps="true"
            android:textColor="@color/textColor2"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/welcome_hang_pic"
            app:layout_constraintStart_toStartOf="@+id/welcome_hang_pic"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.836" />

        <Button
            android:id="@+id/goToHighscore"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/fragmentContainerBackground"
            android:fontFamily="casual"
            android:text="@string/highscoreButtonWelcome"
            android:textAllCaps="true"
            android:textColor="@color/textColor2"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/welcome_hang_pic"
            app:layout_constraintStart_toStartOf="@+id/welcome_hang_pic"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.929" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>