<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/fragmentContainerBackground">

        <TextView
            android:id="@+id/highscoreText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/cardview_compat_inset_shadow"
            android:background="@color/highscoreFragTextBack"
            android:fontFamily="casual"
            android:text="@string/highscoreHeadlineXML"
            android:textAlignment="center"
            android:textColor="@color/textColor1"
            android:textSize="35sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/listInfoPlayer"
                android:layout_width="281dp"
                android:layout_height="match_parent"
                android:background="@color/highscoreFragTextBack"
                android:fontFamily="casual"
                android:text="@string/playerHighscoreXML"
                android:textColor="@color/textColor1"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/listInfoScore"
                android:layout_width="284dp"
                android:layout_height="match_parent"
                android:background="@color/highscoreFragTextBack"
                android:fontFamily="casual"
                android:text="@string/winsHighscoreXML"
                android:textColor="@color/textColor1"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:scrollbars="vertical"
                tools:listitem="@layout/recycler_list_item">

            </androidx.recyclerview.widget.RecyclerView>

        </RelativeLayout>



    </LinearLayout>



</FrameLayout>